recursion.lessons.recursion.tree.Tree.scala.error
Tree:13: error: missing arguments for method tree in class Tree;
follow this method with `_' if you want to treat it as a partially applied function
tree 
^